--- a/index.html
+++ b/index.html
@@ -1,1 +1,56 @@
+<!DOCTYPE html>
+<html lang="es">
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <title>Vota el Pueblo</title>
+  <style>
+    body {
+      font-family: Arial, sans-serif;
+      background-color: #f7f7f7;
+      color: #222;
+      margin: 40px auto;
+      max-width: 800px;
+      padding: 20px;
+      background: #fff;
+      box-shadow: 0 0 10px rgba(0,0,0,0.05);
+    }
+    h1 {
+      color: #aa0000;
+      text-align: center;
+    }
+    p {
+      line-height: 1.6;
+    }
+    .footer {
+      text-align: center;
+      color: #888;
+      font-size: 0.9em;
+      margin-top: 40px;
+    }
+  </style>
+</head>
+<body>
 
+<h1>Vota el Pueblo</h1>
+
+<p>
+Este espacio digital nace en el sudoeste bonaerense con el propósito de organizar, difundir y vincular información política relevante para el presente. 
+Aquí se sistematizan aportes ciudadanos, análisis coyunturales, herramientas de seguimiento y documentación estratégica.
+</p>
+
+<p>
+Buscamos fomentar una conversación crítica desde el territorio, con independencia de estructuras partidarias formales. 
+Nos mueve la convicción de que el pueblo siempre encuentra caminos para expresar sus decisiones.
+</p>
+
+<p>
+Este sitio está en construcción y se actualizará con materiales, mapas, cruces de datos y señales útiles para pensar y actuar colectivamente.
+</p>
+
+<div class="footer">
+Sitio en construcción – Junio 2025
+</div>
+
+</body>
+</html>
